# RecSys_course

./: .gitignore  README.md
hw/: HSE_RecSys_HW1.ipynb  HW.ipynb  README.md  readme.md  tests.py
hw/hw1/: HW1.ipynb  readme.md  tests.py
week1/: README.md
week1/seminar1/: readme.md
week1/seminar2/: Makefile  pyproject.toml  seminar.ipynb
week10/: README.md
week2/: MF_Collaborative_Filtering.ipynb  README.md  Seminar2.ipynb  Seminars_3_4.ipynb  readme.md
week2/data/: critics_reviews  movies_ratings.csv  readme.md
week3/: Content_approaches.ipynb  Hybrid_models.ipynb  MF_full.ipynb  readme.md
week3/seminar5/: Seminar_5.ipynb
week3/seminar5/utils/: activation.py  basic_layers.py  features.py  trainer.py
week3/seminar6/: Seminar_6.ipynb
week3/utils/: data.py  readme.md
week4/: ALS_NeurMF.ipynb  Seminar7_8.ipynb  Week4.ipynb  readme.md
week5/: AE, VAE.ipynb  AWS, AE, VAE.ipynb  Content_approaches.ipynb
week5/utils/: match.py
week6/: Graph_KG_seminar.ipynb  Graph_seminar.ipynb  README.md
week7/: readme.md  seq.ipynb
week7/in_class/: docker-compose.yaml  dummy_models.py
week8/: README.md  readme.md
week8/full/: .dockerignore  Makefile  docker-compose.yaml  dummy_models.py  pyproject.toml
week8/full/docker/: api.Dockerfile  triton.Dockerfile
week8/full/server/: api.py  triton.py
week8/in_class/: Makefile
week9/: .gitignore  README.md
week9/full/: readme.md
week_10/: README.md
week_11/: README.md
week_12/: README.md
week_13/: README.md
week_14/: README.md
week_15/: README.md
week_16/: README.md
(+8 files in other folders)
