[tool.poetry]
name = "seminar"
version = "0.1.0"
description = ""
authors = ["nemexur <alex.milogradsky@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.4.3"
numpy = "^1.23.1"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
animus = "0.0.2"
scipy = "^1.9.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.3"
ipython = "^8.4.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
